parallel.css
svg {
    font: 10px sans-serif;
}

.parallelBackground path {
    fill: none;
    stroke: #ccc;
    stroke-opacity: .4;
    shape-rendering: crispEdges;
}

.parallelForeground path {
    fill: none;
    stroke-opacity: .7;
}

.dire path {
    fill: none;
    stroke-opacity: .7;
    stroke: #D6231C;
}

.radiant path {
    fill: none;
    stroke-opacity: .7;
    stroke: #61A013;
}

.parallelBrush .extent {
    fill-opacity: .3;
    stroke: #fff;
    shape-rendering: crispEdges;
}

.parallelAxis line, .parallelAxis path {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.parallelAxis text {
    text-shadow: 0 1px 0 #fff;
}

